<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>HobbyProject</groupId>
	<artifactId>Game</artifactId>
	<version>0.0.1-SNAPSHOT</version>

	<repositories>
		<repository>
			<snapshots>
				<enabled>false</enabled>
			</snapshots>
			<id>central</id>
			<name>bintray</name>
			<url>https://jcenter.bintray.com</url>
		</repository>
		<repository>
			<id>jitpack.io</id>
			<url>https://jitpack.io</url>
		</repository>
	</repositories>

	<dependencies>
		<dependency>
			<groupId>org.openjfx</groupId>
			<artifactId>javafx-swing</artifactId>
			<version>19</version>
		</dependency>

		<dependency>
			<groupId>com.github.WilliamAHartman</groupId>
			<artifactId>Jamepad</artifactId>
			<version>1.4.0</version>
		</dependency>
		<dependency>
			<groupId>uk.co.electronstudio.sdl2gdx</groupId>
			<artifactId>sdl2gdx</artifactId>
			<version>1.0.4</version>
		</dependency>


<!--		<dependency>-->
<!--			<groupId>net.java.jinput</groupId>-->
<!--			<artifactId>jinput</artifactId>-->
<!--			<version>2.0.9</version>-->
<!--		</dependency>-->

<!--		&lt;!&ndash; https://mvnrepository.com/artifact/net.java.jinput/osx-plugin &ndash;&gt;-->
<!--		<dependency>-->
<!--			<groupId>net.java.jinput</groupId>-->
<!--			<artifactId>osx-plugin</artifactId>-->
<!--			<version>2.0.9</version>-->
<!--		</dependency>-->

<!--		<dependency>-->
<!--			<groupId>net.java.jinput</groupId>-->
<!--			<artifactId>jinput</artifactId>-->
<!--			<version>2.0.9</version>-->
<!--			<classifier>natives-all</classifier>-->
<!--		</dependency>-->

	</dependencies>
	<build>
		<plugins>
			<plugin>
				<artifactId>maven-compiler-plugin</artifactId>
				<configuration>
					<source>17</source>
					<target>17</target>
				</configuration>
			</plugin>
			<plugin>
				<groupId>com.googlecode.mavennatives</groupId>
				<artifactId>maven-nativedependencies-plugin</artifactId>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-shade-plugin</artifactId>
				<version>3.2.4</version>
				<executions>
					<execution>
						<phase>package</phase>
						<goals>
							<goal>shade</goal>
						</goals>
						<configuration>
							<transformers>
								<transformer
									implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
									<mainClass>main.main</mainClass>
								</transformer>
							</transformers>
						</configuration>
					</execution>
				</executions>
			</plugin>

		</plugins>
	</build>
</project>